add jdk 17 test instead of 15